# python-conversational-agent

./: .env.example  .gitignore  README.md  README_LM_STUDIO.md  app_lmstudio_cli.py  pyproject.example.toml  pyproject.toml  requirements-lmstudio.txt  requirements.txt  streamlit_lmstudio_demo.py  vision_test.py
agent/: __init__.py  config.py  json_utils.py  lmstudio_client.py  prompts.py  schemas.py
docs/: lmstudio_gateway.md  project_notes.md
src/python_conversational_agent/chat_agent/: agent_response.py  chat_agent.py  prompts.py
src/python_conversational_agent/frontend/: threejs_mascot.html
src/python_conversational_agent/interface/: app.py  component_decl.py
src/python_conversational_agent/interface/mascot_frontend/: index.html
src/python_conversational_agent/interface/pages/: audio_demo.py  three_d_viewer.py  vision_demo.py
src/python_conversational_agent/interface/pages/frontend/: index.html
src/python_conversational_agent/mascot/: mascot_controller.py
src/python_conversational_agent/speech/: app.py
src/python_conversational_agent/vision/: __init__.py  app.py
tests/: test_schemas.py
