[project]
name = "python-conversational-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "huggingface-hub>=1.19.0",
    "librosa>=0.11.0",
    "piper-tts>=1.4.2",
    "streamlit",
    "torch>=2.12.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"

